<resources>
    <string name="app_name">iUEP</string>
    <string name="logoutButton">Logout</string>
    <string name="loginButton">Login</string>
    <string name="loginSignupButton">Sign Up</string>
    <string name="loginEmail">email</string>
    <string name="loginPassword">password</string>
    <string name="signupName">name</string>
    <string name="signupEmail">email</string>
    <string name="signupPassword">password</string>
    <string name="signupAge">age</string>
    <string name="signupSignupButton">Sign Up</string>
    <string name="myAcc">My Account</string>
    <string name="schedule">Schedule</string>
    <string name="news">News</string>
    <string name="floors">Floors</string>
    <string name="commute">Commute</string>
    <string name="moodle">Moodle</string>
    <string name="ebos">EBOS</string>
    <string name="contact">Contact</string>
    <string name="council">PSUEP</string>
</resources>
