<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_floors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#804CAF50"
        android:drawableTop="@drawable/ic_business_24px"
        android:drawableTint="#4CAF50"
        android:paddingTop="30dp"
        android:text="@string/floors"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/divider12"
        app:layout_constraintStart_toEndOf="@+id/divider10"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <Button
        android:id="@+id/btn_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#8090DF33"
        android:drawableTop="@drawable/ic_assignment_24px"
        android:drawableTint="#90DF33"
        android:paddingTop="30dp"
        android:text="@string/news"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@+id/divider10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <Button
        android:id="@+id/btn_moodle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#8003A9F4"
        android:drawableTop="@drawable/ic_desktop_windows_24px"
        android:drawableTint="#03A9F4"
        android:paddingTop="15dp"
        android:text="@string/moodle"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <Button
        android:id="@+id/btn_ebos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#803F51B5"
        android:drawableTop="@drawable/ic_format_bold_24px"
        android:drawableTint="#3F51B5"
        android:paddingTop="15dp"
        android:text="@string/ebos"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider9"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <Button
        android:id="@+id/btn_more"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#80FF9800"
        android:drawableTop="@drawable/ic_more_horiz_24px"
        android:drawableTint="#FF9800"
        android:paddingTop="15dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toEndOf="@+id/divider9"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <Button
        android:id="@+id/btn_council"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#80505050"
        android:drawableTop="@drawable/ic_supervisor_account_24px"
        android:drawableTint="#505050"
        android:paddingTop="15dp"
        android:text="@string/council"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <Button
        android:id="@+id/btn_commute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#80FFC107"
        android:drawableTop="@drawable/ic_commute_24px"
        android:drawableTint="#FFC107"
        android:paddingTop="30dp"
        android:text="@string/commute"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider12"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#807C7C7C"
        android:drawableTop="@drawable/ic_mail_outline_24px"
        android:drawableTint="#7C7C7C"
        android:paddingTop="30dp"
        android:text="@string/contact"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <Button
        android:id="@+id/btn_myAcc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#802196F3"
        android:drawableTop="@drawable/ic_perm_identity_24px"
        android:drawableTint="#2196F3"
        android:paddingTop="15dp"
        android:text="@string/myAcc"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <Button
        android:id="@+id/btn_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#808BC34A"
        android:drawableTop="@drawable/ic_calendar_today_24px"
        android:drawableTint="#8BC34A"
        android:paddingTop="15dp"
        android:text="@string/schedule"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <View
        android:id="@+id/divider7"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <View
        android:id="@+id/divider6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <View
        android:id="@+id/divider5"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <View
        android:id="@+id/divider8"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <View
        android:id="@+id/divider9"
        android:layout_width="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <View
        android:id="@+id/divider10"
        android:layout_width="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <View
        android:id="@+id/divider12"
        android:layout_width="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

</androidx.constraintlayout.widget.ConstraintLayout>